JG-2007-02-12-1: Enhancem.: Verify product_type depending on gridengine version.
                 Review:    AP, MD, MP

JG-2007-02-12-0: Enhancem.: Renamed gridengine_version 65 to 61.
                            Created gridengine_version 62.
                 Review:    AP, MD, MP

JG-2007-02-09-0: Enhancem.: If a L10N messages file (msg_*.h) has been modified,
                            update testsuite's messages cache.
                 Issue:     74
                 Bugfix:    get_job_state only handled job of $CHECK_USER.
                 Issue:     118
                 Review:    RD

RD-2007-02-09-0: Bugfix:    fixed wrong macro definitions
                 Review:    JG

RM-2007-02-06-0: Enhancem:  New test for issue 1914
                            Test also checks issue 2174.
                 Review:    JG

JG-2007-02-06-0: Enhancem:  New check for IZ 2183.
                 Review:    RD

PJ-2007-02-01-0: Cleanup:   Test cleanup for the issue_2061 test.
                 Review:    JG

EB-2007-01-31-0: Cleanup:   Made modifications according to review for
                            test 2158 and 2145
                 Review:    JG

PJ-2007-01-31-0: Enhancem:  Test safe implementation of the issue_2061 test

PJ-2007-01-30-0: Enhancem:  Added tests for issue 2061 + some function overview in sge_procedures.tcl

EB-2007-01-30-0: Enhancem:  Added missing tests for issue 2158 and 2145

EB-2007-01-26-0: Enhancem:  Fixed bug which caused error in test for issue 1330.

AA-2007-01-23-0: Enhancem:  o -wd/-cwd tests for qsub/qalter/qrsh
                 Review:    RD

RH-2007-01-23-0: Enhancem:  o Performance test for dbwriter added
                            o arco install test splitted (arco_dbwriter_install and
                              arco_reporting_install)
                 Review:    CR

RD-2007-01-22-0: Bugfix:    fixed install_core system error
                 Review:    CR

DT-2007-01-19-0: Enhancem:  o Extended DRMAA tests for DRMAA Java binding 1.0