@@ -1,3 +1,6 @@
+MD-2007-02-14-0: Enhancem.: Added submithost install and copycert test
+                 Review:    JG
+
 JG-2007-02-12-1: Enhancem.: Verify product_type depending on gridengine version.
                  Review:    AP, MD, MP
 
